# VideoAPI

./: .gitignore  .pre-commit-config.yaml  README.md  batch_playback.py  cleanup_folders.sh  demo.py  example.py  google_drive.py  nvr.py  params.yaml  pyproject.toml  rtsp_video_stream.py  thread_details.md  video_api.py
Old/: demo.py  google_drive.py  video_api.py
tests/: conftest.py  test_config_manager.py
utils/: region_select.py  roi_drawer.py  rtsp_video_stream.py  time_utils.py
videoapi/: __init__.py  main.py
videoapi/algorithms/: __init__.py  base_algorithm.py  frame_deduplicator.py
videoapi/configs/: default.yaml  nvr_config.yaml  playback_config.yaml
videoapi/core/: __init__.py  config_manager.py  frame_processor.py  playback_manager.py  video_recorder.py  video_stream.py
videoapi/utils/: __init__.py  frame_utils.py  logging_config.py  time_utils.py
videoapi/visualization/: __init__.py  stream_viewer.py
